modules/gdscript/tests/scripts/analyzer/errors/access_level_internal_func_callable.gd
class Foo:
    internal func foo():
        pass

func test():
    var f := Foo.new()
    var t = f.foo
    t.call()
